modificacion botones para movil

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <h5 class="py-3">110 MIN / 6 A 8 PORCIONES</h5>
                     <div class="pb-4">
                         <button id="enviarCorreo" type="button" class="btn btn-outline-secondary" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Presiona para enviar a tu correo">Enviar por correo</button>
-                        <button  type="button" class="btn btn-outline-secondary ms-3" data-bs-toggle="tooltip" data-bs-placement="right" title="Agrega esta receta a tus favoritos">Añadir a favoritos</button>
+                        <button  type="button" class="btn btn-outline-secondary marginl" data-bs-toggle="tooltip" data-bs-placement="right" title="Agrega esta receta a tus favoritos">Añadir a favoritos</button>
                     </div>
                 </div>
             </div>
